--- a/genindex.html
+++ b/genindex.html
@@ -67,12 +67,14 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.add_tag_remaps">add_tag_remaps() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.assessor">assessor (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+      <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.AppSettings">AppSettings (class in copyxnat.xnat.commands)</a>
 </li>
-      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ASSESSOR_ID_MAP">ASSESSOR_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.assessor">assessor (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ASSESSOR_ID_MAP">ASSESSOR_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.assessors">assessors() (copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.ATTR_SECONDARY_PROJECT_ID">ATTR_SECONDARY_PROJECT_ID (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
@@ -194,8 +196,6 @@
         <li><a href="copyxnat.pyreporter.pyreporter.html#module-copyxnat.pyreporter.pyreporter">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui
 
@@ -203,6 +203,8 @@
         <li><a href="copyxnat.ui.html#module-copyxnat.ui">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     copyxnat.ui.copyxnat_command_line
 
@@ -299,6 +301,8 @@
       <ul>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment class method)</a>
 </li>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatFile class method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources class method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatProject.create">(copyxnat.xnat_backend.pyxnat_server.PyXnatProject class method)</a>
@@ -314,9 +318,11 @@
         <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory.create">(copyxnat.xnat_backend.server_factory.ServerFactory method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create_on_server">create_on_server() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create_on_server">create_on_server() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create_on_server">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create_on_server">(copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
 </li>
       </ul></li>
@@ -336,13 +342,19 @@
       </ul></li>
       <li><a href="versioneer.html#versioneer.do_setup">do_setup() (in module versioneer)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="versioneer.html#versioneer.do_vcs_install">do_vcs_install() (in module versioneer)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.duplicate">duplicate() (copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.download_file">download_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.download_zip_file">download_zip_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
+</li>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.duplicate">duplicate() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.duplicate">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.duplicate">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.duplicate">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
@@ -358,9 +370,11 @@
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.export">export() (copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.export">export() (copyxnat.xnat.xnat_interface.XnatFile method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem.export">(copyxnat.xnat.xnat_interface.XnatFileContainerItem method)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.export">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatParentItem.export">(copyxnat.xnat.xnat_interface.XnatParentItem method)</a>
@@ -384,8 +398,14 @@
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatServer.fetch_interface">(copyxnat.xnat_backend.pyxnat_server.PyXnatServer method)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.file">file (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.file_attributes">file_attributes() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.files">files() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
+</li>
       <li><a href="copyxnat.commands.find_commands.html#copyxnat.commands.find_commands.find_command">find_command() (in module copyxnat.commands.find_commands)</a>
 </li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.full_path">full_path() (copyxnat.xnat.copy_cache.CopyCache method)</a>
@@ -491,6 +511,8 @@
       <ul>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment.interface_method">(copyxnat.xnat.xnat_interface.XnatExperiment attribute)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile.interface_method">(copyxnat.xnat.xnat_interface.XnatFile attribute)</a>
+</li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource.interface_method">(copyxnat.xnat.xnat_interface.XnatInResource attribute)</a>
 </li>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatOutResource.interface_method">(copyxnat.xnat.xnat_interface.XnatOutResource attribute)</a>
@@ -529,6 +551,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">main() (in module copyxnat.ui.copyxnat_command_line)</a>
+</li>
+      <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.make_output_path">make_output_path() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
 </li>
@@ -671,11 +695,13 @@
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment">PyXnatExperiment (class in copyxnat.xnat_backend.pyxnat_server)</a>
+</li>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile">PyXnatFile (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatInResource">PyXnatInResource (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
@@ -797,8 +823,6 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.save_file">save_file() (copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
-</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.scan">scan (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SCAN_ID_MAP">SCAN_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
@@ -809,10 +833,10 @@
 </li>
       <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory">ServerFactory (class in copyxnat.xnat_backend.server_factory)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.SESSION_ID_MAP">SESSION_ID_MAP (copyxnat.xnat.xml_cleaner.XmlCleaner attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand">ShowCommand (class in copyxnat.commands.show_command)</a>
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.start_progress">start_progress() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
@@ -902,8 +926,6 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.warning">warning() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
-      <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.write_file">write_file() (copyxnat.xnat.copy_cache.CopyCache method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="versioneer.html#versioneer.write_to_version_file">write_to_version_file() (in module versioneer)</a>
@@ -934,12 +956,14 @@
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatExperiment">XnatExperiment (class in copyxnat.xnat.xnat_interface)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem">XnatFileContainerItem (class in copyxnat.xnat.xnat_interface)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFile">XnatFile (class in copyxnat.xnat.xnat_interface)</a>
 </li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource">XnatInResource (class in copyxnat.xnat.xnat_interface)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatFileContainerItem">XnatFileContainerItem (class in copyxnat.xnat.xnat_interface)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatInResource">XnatInResource (class in copyxnat.xnat.xnat_interface)</a>
+</li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem">XnatItem (class in copyxnat.xnat.xnat_interface)</a>
 </li>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatOutResource">XnatOutResource (class in copyxnat.xnat.xnat_interface)</a>
