--- a/_modules/copyxnat/xnat/run_command.html
+++ b/_modules/copyxnat/xnat/run_command.html
@@ -44,7 +44,7 @@
 
 
 <span class="kn">from</span> <span class="nn">copyxnat.pyreporter.pyreporter</span> <span class="kn">import</span> <span class="n">PyReporter</span>
-<span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">CommandInputs</span>
+<span class="kn">from</span> <span class="nn">copyxnat.xnat.commands</span> <span class="kn">import</span> <span class="n">CommandInputs</span><span class="p">,</span> <span class="n">AppSettings</span>
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.copy_cache</span> <span class="kn">import</span> <span class="n">CacheBox</span>
 <span class="kn">from</span> <span class="nn">copyxnat.xnat_backend.server_factory</span> <span class="kn">import</span> <span class="n">ServerFactory</span>
 <span class="kn">from</span> <span class="nn">copyxnat.xnat.xnat_interface</span> <span class="kn">import</span> <span class="n">XnatServer</span>
@@ -52,7 +52,8 @@
 
 <div class="viewcode-block" id="run_command"><a class="viewcode-back" href="../../../copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.run_command">[docs]</a><span class="k">def</span> <span class="nf">run_command</span><span class="p">(</span><span class="n">command</span><span class="p">,</span> <span class="n">src_params</span><span class="p">,</span> <span class="n">dst_params</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">project_filter</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
                 <span class="n">verbose</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">dry_run</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">backend</span><span class="o">=</span><span class="s1">&#39;pyxnat&#39;</span><span class="p">,</span>
-                <span class="n">reporter</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">cache_dir</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+                <span class="n">reporter</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">cache_dir</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
+                <span class="n">download_zips</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Runs the command on the specified XNAT servers</span>
 
 <span class="sd">    @param command: the command class to run</span>
@@ -70,10 +71,17 @@
 <span class="sd">    servers. Defaults to `pyxnat`</span>
 <span class="sd">    @param reporter: PyReporter object for user input/output and logging</span>
 <span class="sd">    @param fix_scan_types: Set to True to fix incorrect scan types when copying</span>
+<span class="sd">    @param download_zips: If True then resources will be uploaded and downloaded</span>
+<span class="sd">    as zip files, which is faster but individual file attributes will not be</span>
+<span class="sd">    set when copying between servers</span>
 <span class="sd">    @param cache_dir: Directory where downloaded or cached files will be stored</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="ow">not</span> <span class="n">reporter</span><span class="p">:</span>
         <span class="n">reporter</span> <span class="o">=</span> <span class="n">PyReporter</span><span class="p">(</span><span class="n">dry_run</span><span class="o">=</span><span class="n">dry_run</span><span class="p">,</span> <span class="n">verbose</span><span class="o">=</span><span class="n">verbose</span><span class="p">)</span>
+
+    <span class="n">app_settings</span> <span class="o">=</span> <span class="n">AppSettings</span><span class="p">(</span><span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">,</span>
+                               <span class="n">download_zips</span><span class="o">=</span><span class="n">download_zips</span><span class="p">,</span>
+                               <span class="n">dry_run</span><span class="o">=</span><span class="n">dry_run</span><span class="p">)</span>
 
     <span class="n">cache_box</span> <span class="o">=</span> <span class="n">CacheBox</span><span class="p">(</span><span class="n">root_path</span><span class="o">=</span><span class="n">cache_dir</span><span class="p">)</span>
     <span class="n">cache_type</span> <span class="o">=</span> <span class="n">command</span><span class="o">.</span><span class="n">CACHE_TYPE</span>
@@ -81,11 +89,17 @@
     <span class="n">base_cache</span> <span class="o">=</span> <span class="n">cache_box</span><span class="o">.</span><span class="n">new_cache</span><span class="p">(</span><span class="n">cache_type</span><span class="o">=</span><span class="n">cache_type</span><span class="p">)</span>
 
     <span class="n">factory</span> <span class="o">=</span> <span class="n">ServerFactory</span><span class="p">(</span><span class="n">backend</span><span class="p">)</span>
-    <span class="n">src_xnat</span> <span class="o">=</span> <span class="n">XnatServer</span><span class="p">(</span><span class="n">factory</span><span class="o">=</span><span class="n">factory</span><span class="p">,</span> <span class="n">params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
-                          <span class="n">base_cache</span><span class="o">=</span><span class="n">base_cache</span><span class="p">,</span> <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span><span class="p">)</span>
+
+    <span class="n">src_xnat</span> <span class="o">=</span> <span class="n">XnatServer</span><span class="p">(</span><span class="n">factory</span><span class="o">=</span><span class="n">factory</span><span class="p">,</span>
+                          <span class="n">params</span><span class="o">=</span><span class="n">src_params</span><span class="p">,</span>
+                          <span class="n">base_cache</span><span class="o">=</span><span class="n">base_cache</span><span class="p">,</span>
+                          <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span><span class="p">)</span>
+
     <span class="k">if</span> <span class="n">dst_params</span> <span class="ow">and</span> <span class="n">command</span><span class="o">.</span><span class="n">USE_DST_SERVER</span><span class="p">:</span>
-        <span class="n">dst_xnat</span> <span class="o">=</span> <span class="n">XnatServer</span><span class="p">(</span><span class="n">factory</span><span class="o">=</span><span class="n">factory</span><span class="p">,</span> <span class="n">params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
-                              <span class="n">base_cache</span><span class="o">=</span><span class="n">base_cache</span><span class="p">,</span> <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span><span class="p">)</span>
+        <span class="n">dst_xnat</span> <span class="o">=</span> <span class="n">XnatServer</span><span class="p">(</span><span class="n">factory</span><span class="o">=</span><span class="n">factory</span><span class="p">,</span>
+                              <span class="n">params</span><span class="o">=</span><span class="n">dst_params</span><span class="p">,</span>
+                              <span class="n">base_cache</span><span class="o">=</span><span class="n">base_cache</span><span class="p">,</span>
+                              <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">dst_xnat</span> <span class="o">=</span> <span class="kc">None</span>
 
@@ -95,7 +109,7 @@
                                     <span class="n">src_xnat_server</span><span class="o">=</span><span class="n">src_xnat</span><span class="p">,</span>
                                     <span class="n">dst_xnat_server</span><span class="o">=</span><span class="n">dst_xnat</span><span class="p">,</span>
                                     <span class="n">project_filter</span><span class="o">=</span><span class="n">project_filter</span><span class="p">,</span>
-                                    <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">,</span>
+                                    <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span><span class="p">,</span>
                                     <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span>
                                     <span class="p">)</span>
 
@@ -117,7 +131,7 @@
 
 
 <div class="viewcode-block" id="run_command_on_servers"><a class="viewcode-back" href="../../../copyxnat.xnat.run_command.html#copyxnat.xnat.run_command.run_command_on_servers">[docs]</a><span class="k">def</span> <span class="nf">run_command_on_servers</span><span class="p">(</span><span class="n">command</span><span class="p">,</span> <span class="n">src_xnat_server</span><span class="p">,</span> <span class="n">dst_xnat_server</span><span class="p">,</span>
-                           <span class="n">reporter</span><span class="p">,</span> <span class="n">fix_scan_types</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">project_filter</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+                           <span class="n">reporter</span><span class="p">,</span> <span class="n">app_settings</span><span class="p">,</span> <span class="n">project_filter</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Runs the specified command on the specified XnatServer objects</span>
 
@@ -125,6 +139,7 @@
 <span class="sd">    @param src_xnat_server: Source XnatServer</span>
 <span class="sd">    @param dst_xnat_server: Destination XnatServer, if required for this command</span>
 <span class="sd">    @param reporter: PyReporter object for user input/output and logging</span>
+<span class="sd">    @param app_settings: holds global parameters</span>
 <span class="sd">    @param project_filter: array of project names to process or None to process</span>
 <span class="sd">    all projects visible on the server. If a project name needs to be different</span>
 <span class="sd">    on the source and destination servers, the string should be of the form</span>
@@ -160,7 +175,7 @@
         <span class="n">src_project</span><span class="p">,</span> <span class="n">dst_project</span> <span class="o">=</span> <span class="n">resolve_projects</span><span class="p">(</span><span class="n">project</span><span class="p">)</span>
         <span class="n">inputs</span> <span class="o">=</span> <span class="n">CommandInputs</span><span class="p">(</span><span class="n">dst_xnat</span><span class="o">=</span><span class="n">dst_xnat_server</span><span class="p">,</span>
                                <span class="n">dst_project</span><span class="o">=</span><span class="n">dst_project</span><span class="p">,</span>
-                               <span class="n">fix_scan_types</span><span class="o">=</span><span class="n">fix_scan_types</span><span class="p">,</span>
+                               <span class="n">app_settings</span><span class="o">=</span><span class="n">app_settings</span><span class="p">,</span>
                                <span class="n">reporter</span><span class="o">=</span><span class="n">reporter</span><span class="p">)</span>
         <span class="n">project_command</span> <span class="o">=</span> <span class="n">command</span><span class="p">(</span><span class="n">inputs</span><span class="o">=</span><span class="n">inputs</span><span class="p">,</span> <span class="n">scope</span><span class="o">=</span><span class="n">project</span><span class="p">)</span>
 
