--- a/_modules/copyxnat/xnat/xml_cleaner.html
+++ b/_modules/copyxnat/xnat/xml_cleaner.html
@@ -58,7 +58,8 @@
     <span class="n">reconstruction</span> <span class="o">=</span> <span class="s1">&#39;reconstruction&#39;</span>
     <span class="n">resource</span> <span class="o">=</span> <span class="s1">&#39;resource&#39;</span>
     <span class="n">in_resource</span> <span class="o">=</span> <span class="s1">&#39;in_resource&#39;</span>
-    <span class="n">out_resource</span> <span class="o">=</span> <span class="s1">&#39;out_resource&#39;</span></div>
+    <span class="n">out_resource</span> <span class="o">=</span> <span class="s1">&#39;out_resource&#39;</span>
+    <span class="n">file</span> <span class="o">=</span> <span class="s1">&#39;file&#39;</span></div>
 
 
 <div class="viewcode-block" id="XmlCleaner"><a class="viewcode-back" href="../../../copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner">[docs]</a><span class="k">class</span> <span class="nc">XmlCleaner</span><span class="p">:</span>
@@ -119,6 +120,8 @@
         <span class="n">XnatType</span><span class="o">.</span><span class="n">in_resource</span><span class="p">:</span> <span class="p">{</span>
         <span class="p">},</span>
         <span class="n">XnatType</span><span class="o">.</span><span class="n">out_resource</span><span class="p">:</span> <span class="p">{</span>
+        <span class="p">},</span>
+        <span class="n">XnatType</span><span class="o">.</span><span class="n">file</span><span class="p">:</span> <span class="p">{</span>
         <span class="p">}</span>
     <span class="p">}</span>
 
