deploy: 16c8a6a223e90ec427cc59bfb097844150dc2fc3

--- a/_modules/copyxnat/commands/check_datatypes_command.html
+++ b/_modules/copyxnat/commands/check_datatypes_command.html
@@ -55,6 +55,7 @@
 <span class="sd">    scan datatypes that are present on the source server</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">NAME</span> <span class="o">=</span> <span class="s1">&#39;Check Datatypes&#39;</span>
+    <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;check&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;check_datatypes&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">True</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;cache&#39;</span>
