--- a/_modules/copyxnat/commands/export_command.html
+++ b/_modules/copyxnat/commands/export_command.html
@@ -49,6 +49,7 @@
     <span class="sd">&quot;&quot;&quot;Command which exports XNAT project data onto local disk&quot;&quot;&quot;</span>
 
     <span class="n">NAME</span> <span class="o">=</span> <span class="s1">&#39;Download&#39;</span>
+    <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;download&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;export&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;downloads&#39;</span>
