--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -50,6 +50,7 @@
     <span class="sd">&quot;&quot;&quot;Command which copies XNAT projects between servers&quot;&quot;&quot;</span>
 
     <span class="n">NAME</span> <span class="o">=</span> <span class="s1">&#39;Copy&#39;</span>
+    <span class="n">VERB</span> <span class="o">=</span> <span class="s1">&#39;copy&#39;</span>
     <span class="n">COMMAND_LINE</span> <span class="o">=</span> <span class="s1">&#39;copy&#39;</span>
     <span class="n">USE_DST_SERVER</span> <span class="o">=</span> <span class="kc">True</span>
     <span class="n">CACHE_TYPE</span> <span class="o">=</span> <span class="s1">&#39;cache&#39;</span>
