--- a/_modules/copyxnat/xnat/run_command.html
+++ b/_modules/copyxnat/xnat/run_command.html
@@ -103,7 +103,7 @@
     <span class="k">else</span><span class="p">:</span>
         <span class="n">dst_xnat</span> <span class="o">=</span> <span class="kc">None</span>
 
-    <span class="n">reporter</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s1">&#39;Running </span><span class="si">{}</span><span class="s1"> command&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">command</span><span class="o">.</span><span class="n">NAME</span><span class="p">))</span>
+    <span class="n">reporter</span><span class="o">.</span><span class="n">verbose_log</span><span class="p">(</span><span class="s1">&#39;Running </span><span class="si">{}</span><span class="s1"> command&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">command</span><span class="o">.</span><span class="n">NAME</span><span class="p">))</span>
 
     <span class="n">result</span> <span class="o">=</span> <span class="n">run_command_on_servers</span><span class="p">(</span><span class="n">command</span><span class="o">=</span><span class="n">command</span><span class="p">,</span>
                                     <span class="n">src_xnat_server</span><span class="o">=</span><span class="n">src_xnat</span><span class="p">,</span>
@@ -118,7 +118,7 @@
         <span class="n">dst_xnat</span><span class="o">.</span><span class="n">logout</span><span class="p">()</span>
 
     <span class="n">output_path</span> <span class="o">=</span> <span class="n">src_xnat</span><span class="o">.</span><span class="n">cache</span><span class="o">.</span><span class="n">full_path</span><span class="p">()</span>
-    <span class="n">reporter</span><span class="o">.</span><span class="n">message</span><span class="p">(</span><span class="s1">&#39;Output files are in </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">output_path</span><span class="p">))</span>
+    <span class="n">reporter</span><span class="o">.</span><span class="n">verbose_log</span><span class="p">(</span><span class="s1">&#39;Output files are in </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">output_path</span><span class="p">))</span>
     <span class="k">return</span> <span class="n">result</span></div>
 
 
@@ -183,9 +183,8 @@
         <span class="n">num_sessions</span> <span class="o">=</span> <span class="n">src_xnat_server</span><span class="o">.</span><span class="n">num_experiments</span><span class="p">(</span><span class="n">src_project</span><span class="p">)</span>
 
         <span class="n">reporter</span><span class="o">.</span><span class="n">start_progress</span><span class="p">(</span>
-            <span class="n">message</span><span class="o">=</span><span class="s1">&#39;</span><span class="si">{}</span><span class="s1"> </span><span class="si">{}</span><span class="s1"> sessions for </span><span class="si">{}</span><span class="s1">&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">command</span><span class="o">.</span><span class="n">NAME</span><span class="p">,</span>
-                                                   <span class="n">num_sessions</span><span class="p">,</span>
-                                                   <span class="n">server_project</span><span class="o">.</span><span class="n">label</span><span class="p">),</span>
+            <span class="n">message</span><span class="o">=</span><span class="s2">&quot;</span><span class="si">{:&gt;20}</span><span class="s2">: </span><span class="si">{:&gt;3}</span><span class="s2"> sessions to </span><span class="si">{}</span><span class="s2"> &quot;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
+                <span class="n">server_project</span><span class="o">.</span><span class="n">label</span><span class="p">,</span> <span class="n">num_sessions</span><span class="p">,</span> <span class="n">command</span><span class="o">.</span><span class="n">VERB</span><span class="p">),</span>
             <span class="n">max_iter</span><span class="o">=</span><span class="n">num_sessions</span><span class="p">)</span>
         <span class="n">server_project</span><span class="o">.</span><span class="n">run_recursive</span><span class="p">(</span>
             <span class="n">function</span><span class="o">=</span><span class="n">project_command</span><span class="o">.</span><span class="n">run</span><span class="p">,</span>
