--- a/genindex.html
+++ b/genindex.html
@@ -318,9 +318,11 @@
         <li><a href="copyxnat.xnat_backend.server_factory.html#copyxnat.xnat_backend.server_factory.ServerFactory.create">(copyxnat.xnat_backend.server_factory.ServerFactory method)</a>
 </li>
       </ul></li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create_on_server">create_on_server() (copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
+      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.create_on_server">create_on_server() (copyxnat.xnat.xnat_interface.XnatItem method)</a>
 
       <ul>
+        <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile.create_on_server">(copyxnat.xnat_backend.pyxnat_server.PyXnatFile method)</a>
+</li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.create_on_server">(copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
 </li>
         <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase.create_on_server">(copyxnat.xnat_backend.pyxnat_server.PyXnatResourceBase method)</a>
@@ -366,6 +368,8 @@
 <h2 id="E">E</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItem.exists">exists() (copyxnat.xnat_backend.pyxnat_server.PyXnatItem method)</a>
+</li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XnatType.experiment">experiment (copyxnat.xnat.xml_cleaner.XnatType attribute)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatSubject.experiments">experiments() (copyxnat.xnat_backend.pyxnat_server.PyXnatSubject method)</a>
@@ -417,8 +421,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_children">get_children() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
-</li>
-      <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatBase.get_children_of_type">get_children_of_type() (copyxnat.xnat.xnat_interface.XnatBase method)</a>
 </li>
       <li><a href="versioneer.html#versioneer.get_cmdclass">get_cmdclass() (in module versioneer)</a>
 </li>
@@ -657,6 +659,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources.out_resources">out_resources() (copyxnat.xnat_backend.pyxnat_server.PyXnatItemWithResources method)</a>
 </li>
+      <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.output">output() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -672,6 +676,8 @@
       <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.print_results">print_results() (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand method)</a>
 
       <ul>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.print_results">(copyxnat.commands.show_command.ShowCommand method)</a>
+</li>
         <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.print_results">(copyxnat.xnat.commands.Command method)</a>
 </li>
       </ul></li>
@@ -695,10 +701,10 @@
 </li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter">PyReporter (class in copyxnat.pyreporter.pyreporter)</a>
 </li>
-      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatAssessor">PyXnatAssessor (class in copyxnat.xnat_backend.pyxnat_server)</a>
+</li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatExperiment">PyXnatExperiment (class in copyxnat.xnat_backend.pyxnat_server)</a>
 </li>
       <li><a href="copyxnat.xnat_backend.pyxnat_server.html#copyxnat.xnat_backend.pyxnat_server.PyXnatFile">PyXnatFile (class in copyxnat.xnat_backend.pyxnat_server)</a>
@@ -887,12 +893,24 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="copyxnat.commands.check_datatypes_command.html#copyxnat.commands.check_datatypes_command.CheckDatatypesCommand.VERB">VERB (copyxnat.commands.check_datatypes_command.CheckDatatypesCommand attribute)</a>
+
+      <ul>
+        <li><a href="copyxnat.commands.copy_command.html#copyxnat.commands.copy_command.CopyCommand.VERB">(copyxnat.commands.copy_command.CopyCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.export_command.html#copyxnat.commands.export_command.ExportCommand.VERB">(copyxnat.commands.export_command.ExportCommand attribute)</a>
+</li>
+        <li><a href="copyxnat.commands.show_command.html#copyxnat.commands.show_command.ShowCommand.VERB">(copyxnat.commands.show_command.ShowCommand attribute)</a>
+</li>
+      </ul></li>
       <li><a href="copyxnat.pyreporter.pyreporter.html#copyxnat.pyreporter.pyreporter.PyReporter.verbose_log">verbose_log() (copyxnat.pyreporter.pyreporter.PyReporter method)</a>
 </li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_pip">version_from_pip() (in module copyxnat.utils.versioning)</a>
 </li>
       <li><a href="copyxnat.utils.versioning.html#copyxnat.utils.versioning.version_from_versioneer">version_from_versioneer() (in module copyxnat.utils.versioning)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     versioneer
 
@@ -900,8 +918,6 @@
         <li><a href="versioneer.html#module-versioneer">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="versioneer.html#versioneer.VersioneerBadRootError">VersioneerBadRootError</a>
 </li>
       <li><a href="copyxnat.utils.versioneer_version.html#copyxnat.utils.versioneer_version.VersioneerConfig">VersioneerConfig (class in copyxnat.utils.versioneer_version)</a>
